# pragmatic-bim-data-contract

./: .gitignore  .gitmodules  README.md  brep_exporter.py  changes.html  core.html  create_brep.py  elements-physical.html  elements-virtual.html  enum_localizations.yaml  ifc_metadata_extractor.py  index.html  mkdocs-classification.yml  mkdocs.yml  modules.json  performance-enums.html  performance.html  pragmatic-bim.code-workspace  pragmatic_bim_schema.yaml  requirements-docs.txt  requirements.html  versions.json
.md-src/: index.md
changes/: index.html
classification/: README.md  building-metric.html  building-metric.md  catalog.yaml  connection-functional-type.html  document-function.html  door-connector-product.html  facade-covering-product.html  floor-covering-product.html  index.html  mapping-ceiling-covering-products-to-kbob-ecobilans.html  mapping-connector-products-to-bkp.html  mapping-connector-products-to-material.html  mapping-door-connector-products-to-kbob-ecobilans.html  mapping-facade-covering-products-to-kbob-ecobilans.html  mapping-foundation-products-to-bkp.html  mapping-material-to-uniclass-ma.html  (+23 more)
converter/: README.md  alembic.ini  pyproject.toml
converter/alembic/: env.py
converter/alembic/versions/: 0001_initial.py  0002_entity_geometries.py
converter/src/pbs_converter/: __init__.py  cli.py  config.py  db.py  exporter.py  geometry_ingester.py  ifc_reader.py  mapping.py  models.py  pipeline.py  schema_records.py  validator.py
converter/tests/: test_geometry_ingester.py  test_mapping.py  test_sqlite_integration.py  test_validator.py
(+4715 files in other folders)
