[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbs-converter"
version = "0.1.0"
description = "IFC to Pragmatic BIM schema converter with SQLAlchemy persistence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "PyYAML>=6,<7",
  "ifcopenshell>=0.8.0",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
pbs-converter = "pbs_converter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
